<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Application</string>
    <string name="selected_item">Selected item:</string>
    <string name="register_screen">Register Screen</string>
    <string name="profile_screen">Profile Screen</string>
    <string name="view_screen">View Screen</string>
    <string name="extended_fab_button">Extended FAB Button</string>
    <string name="multi_threading_tasks">Multi Threading Tasks</string>
    <string name="drawable_task">Drawable Task</string>
    <string name="room_database_task">Room Database TasK</string>
    <string name="enter_the_email">Enter the Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>

    <!--    For Map-->
    <string name="app_name_for_map">Map</string>
    <string name="my_map_api_key">AIzaSyCMXWYKMmAqYpFv6s53Ka7XPqpMho96t_A</string>

    <string-array name="Models">
        <item>Ferrari</item>
        <item>Lamborgini</item>
        <item>Bugatti</item>
        <item>Mclaren</item>
        <item>Konigsek</item>

    </string-array>
    <string name="title_activity_layout_demo">LayoutDemo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment1">Fragment1</string>
    <string name="fragment2">Fragment2</string>
    <string name="fragment3">Fragment3</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="details">Details</string>
    <string name="description">description</string>
    <string name="brand">brand</string>
    <string name="stock">stock</string>
    <string name="rating">rating</string>
    <string name="discount">discount</string>
    <string name="title1">title1</string>
    <string name="price1">price1</string>
    <string name="category1">Category1</string>
    <string name="submit">Submit</string>

    <string name="map_setting">setting</string>
    <string name="hide_pointer">hide pointer</string>
    <string name="hide_current">"hide current "</string>
    <string name="hide_zoom">hide zoom</string>
    <string name="fcm_task">FCM Task</string>
    <string name="home_activity">Home Activity</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="hobby">Hobby</string>
    <string name="edit_button">Edit Button</string>
    <string name="edit_activity">Edit Activity</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_address">Enter your Address</string>
    <string name="enter_your_phone">Enter your Phone</string>
    <string name="enter_your_hobby">Enter your Hobby</string>
    <string name="save_button">Save Button</string>
    <string name="contacts">Contacts</string>
    <string name="go_back">Go Back</string>
    <string name="enter_data">Enter Data</string>
    <string name="go_to_second_screen">Go to Second Screen</string>
    <string name="enter_your_link">Enter Your Link</string>
    <string name="click">Click</string>
    <string name="contact_list">Contact List</string>
    <string name="battery_status">Battery Status</string>
    <string name="battery_percentage">Battery Percentage</string>

    <string name="dollar_sign">Price : $%1$d</string>
    <string name="no_products">No Product Available</string>
    <string name="brandName">Company Name : %1$s</string>
    <string name="price_sign">Price : $</string>
    <string name="product_name_title">Product : </string>
    <string name="enter_any_topic">Enter Any Topic</string>
    <string name="save">save</string>
    <string name="userinfo">UserInfo</string>
    <string name="edit">Edit</string>
    <string name="channel_name" />
    <string name="channel_description" />
</resources>



